devops/react-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: react
  labels:
    app: react
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: gcr.io/test-kubernetes-255309/react
          imagePullPolicy: Always
          ports:
            - containerPort: 80
