devops/statics-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: statics
  labels:
    app: statics
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: statics
    spec:
      containers:
        - name: statics
          image: gcr.io/test-kubernetes-255309/statics
          imagePullPolicy: Always
          ports:
            - containerPort: 80
