devops/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: django
