devops/statics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statics-service
  labels:
    app: statics
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: statics
