devops/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: django-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /django-static/*
            backend:
              serviceName: statics-service
              servicePort: 80
          - path: /api/*
            backend:
              serviceName: django-service
              servicePort: 8000
          - path: /*
            backend:
              serviceName: react-service
              servicePort: 80
